프론트스터디2일차

--- a/index.html
+++ b/index.html
@@ -10,11 +10,40 @@
     <h3>DSC 3기 이도연</h3>
     <hr>
     <h6><strong>팀 프로젝트 : 돌다리</strong></h6>
-    <P>
-        소개 : 부산대 학생들을 타겟으로 한 부동산, 책 등 양도 거래 플랫폼<br>
-        기능 : 리뷰 분석, 추천 기능 등<br>
-        <!--주석기능, 이름 클릭 시 페이지 전환 기능을 추가합니다-->
-        제작 : 박상은, 윤석준, 탁향정, <a href="introduce.html">이도연</a> <br>
-    </P>
+    <dl>
+        <dt>소개 : </dt>
+        <dd>부산대 학생들을 타겟으로 한 부동산, 책 등 양도 거래 플랫폼</dd>
+        <li>기능 : 리뷰 분석, 추천 기능 등</li>
+        <!--br 대신 list로 구별을 해 봅시다-->
+        <li>제작 : 박상은, 윤석준, 탁향정, <a href="introduce.html">이도연</a> </li>
+    </dl>
+    <table style="width: 50%;">
+       <tr style="background-color: cornflowerblue;">
+           <th>과일</th>
+           <th>생선</th>
+        </tr>
+        <tr>
+            <td>망고</td>
+            <td>연어</td>
+        </tr>
+    </table>
+    
+    <!--공간분할-->
+    <p style="border: darkgoldenrod 3px solid;">
+        block 타입. 화면끝까지 라인
+    </p>
+
+    <div style="border: darkgreen 3px solid;">
+        <h3>div는 여러개를 한번에 묶기 좋음</h3>
+        <p>
+            배고프다..케이크가 먹고싶어요
+        </p>
+    </div>
+    <p style="background-color: darkgray;"> 저는 사실
+    <span style="border: darkorchid 3px dotted;">
+        민초단
+    </span>
+    입니다.
+    </p>
 </body>
 </html>
