프론트스터디(3)

--- a/index.html
+++ b/index.html
@@ -4,46 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FrontStudy</title>
+    <style>
+        ul li{color: coral ; text-decoration:underline;}
+        #fruit>li{
+            color: darkcyan;
+        }
+        ul, ol{
+            background-color: rgb(141, 99, 141);
+        }
+
+    </style>
 </head>
 <body>
-    <h1>1011_스터디_1</h1>
-    <h3>DSC 3기 이도연</h3>
-    <hr>
-    <h6><strong>팀 프로젝트 : 돌다리</strong></h6>
-    <dl>
-        <dt>소개 : </dt>
-        <dd>부산대 학생들을 타겟으로 한 부동산, 책 등 양도 거래 플랫폼</dd>
-        <li>기능 : 리뷰 분석, 추천 기능 등</li>
-        <!--br 대신 list로 구별을 해 봅시다-->
-        <li>제작 : 박상은, 윤석준, 탁향정, <a href="introduce.html">이도연</a> </li>
-    </dl>
-    <table style="width: 50%;">
-       <tr style="background-color: cornflowerblue;">
-           <th>과일</th>
-           <th>생선</th>
-        </tr>
-        <tr>
-            <td>망고</td>
-            <td>연어</td>
-        </tr>
-    </table>
-    
-    <!--공간분할-->
-    <p style="border: darkgoldenrod 3px solid;">
-        block 타입. 화면끝까지 라인
+    <ul>
+        <li>strawberry</li>
+        <li>apple</li>
+        <li>mango</li>
+    </ul>
+    <ol id="fruit">
+        <li>strawberry</li>
+        <li>apple</li>
+            <ol>
+                <li>red</li>
+                <li>green</li>
+            </ol>
+        <li>mango</li>
+    </ol>
+    <p style="background-color : darkorange;">
+        컨텐츠 부분
     </p>
-
-    <div style="border: darkgreen 3px solid;">
-        <h3>div는 여러개를 한번에 묶기 좋음</h3>
-        <p>
-            배고프다..케이크가 먹고싶어요
-        </p>
-    </div>
-    <p style="background-color: darkgray;"> 저는 사실
-    <span style="border: darkorchid 3px dotted;">
-        민초단
-    </span>
-    입니다.
+    <p style="background-color : darkorange; padding : 10px;">
+        컨텐츠 부분에 패딩 추가, 패딩의 순서는 위, 오른쪽, 아래 왼쪽 순서
+    </p>
+    <p style="border:darkorange 1px solid;">
+        컨텐츠 부분, 선추가, 패딩도 보더도 컨텐츠의 높이와 넓이에 포함x
+    </p>
+    <p style="background-color : green;">
+        마진 추가
+    </p>
+    <p style="background-color : pink; margin: 10px">
+        마진 추가 마진의 순서는 위, 오른쪽, 아래 왼쪽 순서
     </p>
 </body>
 </html>
